# pycompo

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings_ifs_tco3999-ng5_deepoff_opv0_w0.yaml  settings_ifs_tco3999-ng5_deepoff_opv0_w1.yaml  settings_ifs_tco3999-ng5_deepoff_opv4_w1.yaml  settings_ifs_tco3999-ng5_rcbmf_opv0_w0.yaml  settings_ifs_tco3999-ng5_rcbmf_opv0_w1.yaml  settings_ifs_tco3999-ng5_rcbmf_opv4_w1.yaml  settings_ngc5004_opv0_c0.yaml  settings_ngc5004_opv0_c1.yaml  settings_ngc5004_opv0_c1_p.yaml  settings_ngc5004_opv0_w0.yaml  settings_ngc5004_opv0_w1.yaml  settings_ngc5004_opv0_w1_p.yaml  settings_ngc5004_opv1_w1.yaml  settings_ngc5004_opv2_w1.yaml  settings_ngc5004_opv4_c1.yaml  settings_ngc5004_opv4_w0.yaml  settings_ngc5004_opv4_w1.yaml  settings_ngc5004_pc01.yaml  settings_ngc5004_pc02.yaml  settings_ngc5004_pc03.yaml  settings_ngc5004_pc04.yaml  settings_template.yaml
examples/: analyze_composite_quartiles.ipynb  analyze_composite_stats.ipynb  analyze_composites.ipynb  build_composite_step-by-step.ipynb  build_composite_step-by-step_permut.ipynb  test_extract_SST-blobs.ipynb  test_extract_SST-blobs_no-detrend.ipynb
pycompo/: composite.py  coord.py  driver.py  ellipse.py  feature_cutout.py  filter.py  plot.py  sst_features.py  utils.py  wind.py
pycompo/api/: combine_feature_props.py  get_composites.py  get_composites_quartiles.py  get_composites_subgroups.py  (+1 more)
run/: run_combine_featprops.sh  run_get_binned_compos.sh  run_get_compos.sh  run_pycompo.sh  run_pycompo_full.sh  run_pycompo_full_permut.sh  run_pycompo_half.sh
(+19 files in other folders)
