[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycompo"
authors = [
    {name = "Henning Franke, MPI-M"},
]
dependencies = [
    "cmocean",
    "joblib",
    "math",
    "matplotlib",
    "numpy",
    "pandas",
    "pathlib",
    "scipy",
    "skimage",
    "sys",
    "traceback",
    "typing",
    "warnings",
    "xarray",
    "yaml",
]
description = "A python-based toolbox for composite analysis."
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers=[
    "Private :: Do Not Upload",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pycompo.__version__"}

[tool.setuptools]
packages = ["pycompo"]